// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queryCS: 序 1`] = `
Array [
  Object {
    "声": "ɕ",
    "调": 4,
    "释": "〔原〕",
    "音": "ɕy",
    "韵": "y",
  },
  Object {
    "声": "ɕ",
    "调": 4,
    "释": "〔新〕",
    "音": "ɕi",
    "韵": "i",
  },
]
`;

exports[`queryCS: 強 1`] = `
Array [
  Object {
    "声": "tɕ",
    "调": 2,
    "释": "倔强,强大,勉强",
    "音": "tɕian",
    "韵": "ian",
  },
  Object {
    "声": "tɕ",
    "调": 3,
    "释": "倔强,强大,勉强",
    "音": "tɕian",
    "韵": "ian",
  },
  Object {
    "声": "tɕ",
    "调": 5,
    "释": "倔强,强大,勉强",
    "音": "tɕian",
    "韵": "ian",
  },
]
`;

exports[`queryCS: 指 1`] = `
Array [
  Object {
    "声": "ts",
    "调": 6,
    "释": "〔未注明〕",
    "音": "tsɿ",
    "韵": "ɿ",
  },
  Object {
    "声": "ts",
    "调": 3,
    "释": "〔未注明〕",
    "音": "tsɿ",
    "韵": "ɿ",
  },
]
`;

exports[`queryCS: 會 1`] = `
Array [
  Object {
    "声": "f",
    "调": 5,
    "释": "〔文〕开会,会不会之文白读皆同",
    "音": "fei",
    "韵": "ei",
  },
  Object {
    "声": "f",
    "调": 4,
    "释": "〔白〕开会,会不会之文白读皆同",
    "音": "fei",
    "韵": "ei",
  },
  Object {
    "声": "kʰ",
    "调": 4,
    "释": "",
    "音": "kʰuai",
    "韵": "uai",
  },
]
`;

exports[`queryCS: 核 1`] = `
Array [
  Object {
    "声": "x",
    "调": 6,
    "释": "核桃,核对同音",
    "音": "xɤ",
    "韵": "ɤ",
  },
]
`;

exports[`queryCS: 樹 1`] = `
Array [
  Object {
    "声": "ɕ",
    "调": 5,
    "释": "〔文〕树立",
    "音": "ɕy",
    "韵": "y",
  },
  Object {
    "声": "ɕ",
    "调": 4,
    "释": "〔白〕树立",
    "音": "ɕy",
    "韵": "y",
  },
  Object {
    "声": "ɕ",
    "调": 5,
    "释": "〔文〕树林",
    "音": "ɕy",
    "韵": "y",
  },
  Object {
    "声": "ɕ",
    "调": 4,
    "释": "〔白〕树林",
    "音": "ɕy",
    "韵": "y",
  },
]
`;

exports[`queryCS: 蟻 1`] = `
Array [
  Object {
    "声": "ȵ",
    "调": 2,
    "释": "〔文〕",
    "音": "ȵi",
    "韵": "i",
  },
  Object {
    "声": "ȵ",
    "调": 5,
    "释": "〔白〕",
    "音": "ȵi",
    "韵": "i",
  },
  Object {
    "声": "ȵ",
    "调": 3,
    "释": "〔白〕",
    "音": "ȵi",
    "韵": "i",
  },
  Object {
    "声": "ȵ",
    "调": 4,
    "释": "〔白〕",
    "音": "ȵi",
    "韵": "i",
  },
]
`;

exports[`queryCS: 間 1`] = `
Array [
  Object {
    "声": "k",
    "调": 1,
    "释": "中间",
    "音": "kan",
    "韵": "an",
  },
  Object {
    "声": "k",
    "调": 4,
    "释": "间断",
    "音": "kan",
    "韵": "an",
  },
]
`;
